@@ -2,6 +2,7 @@ package com.vempraarena.plataforma.config;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
@@ -13,6 +14,7 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -21,17 +23,31 @@ public class SecurityConfig {
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-                // 1. Liberação do CORS adicionada aqui:
+                // Desabilita o CSRF 
+                .csrf(AbstractHttpConfigurer::disable)
+                
+                // Configuração do CORS para permitir o front (agora vai pegar edu kk)
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-
-                // O resto continua igual ao seu:
-                .csrf(csrf -> csrf.disable())
+                
+                // Configuração de autorização de rotas
                 .authorizeHttpRequests(auth -> auth
-                        .requestMatchers("/*.html", "/css/**", "/images/**",
-                                "/api/usuarios/**", "/api/promotores/**", "/api/events/**",
-                                "/api/admin/**")
-                        .permitAll()
-                        .anyRequest().authenticated());
+                        
+                        .requestMatchers("/*.html", "/css/**", "/images/**", "/js/**").permitAll()
+                        
+                        // Rotas públicas (Autenticação e Cadastro)
+                        .requestMatchers(HttpMethod.POST, "/api/usuarios/login").permitAll()
+                        .requestMatchers(HttpMethod.POST, "/api/usuarios/cadastrar").permitAll()
+                        .requestMatchers(HttpMethod.POST, "/api/admin/login").permitAll()
+                        .requestMatchers(HttpMethod.POST, "/api/admin/cadastrar").permitAll() 
+                        .requestMatchers(HttpMethod.POST, "/api/promotores/login").permitAll()
+                        .requestMatchers(HttpMethod.POST, "/api/promotores/cadastrar").permitAll()
+                        
+                        //basicamente para rotas publicas ou eventos
+                        .requestMatchers(HttpMethod.GET, "/api/events/**").permitAll()
+                        
+                        // comprar ingresso ou alterar dados
+                        .anyRequest().authenticated()
+                );
 
         return http.build();
     }
@@ -41,14 +57,15 @@ public class SecurityConfig {
         return new BCryptPasswordEncoder();
     }
 
-    // 2. Configuração das regras do CORS adicionada aqui no final:
     @Bean
     CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOriginPatterns(Arrays.asList("*")); // ← corrigido
+        //  todas as origens, só pega no live server se for assim
+        configuration.setAllowedOriginPatterns(List.of("*")); 
         configuration.setAllowCredentials(true);
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+        // http basico liberado para o frontend, se for diferente do live server tem que ser assim
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        configuration.setAllowedHeaders(List.of("*"));
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
